<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".vista.MenuActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/btnRegEst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frmMenu_registrar" />

    <Button
        android:id="@+id/btnLis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frmMenu_listar" />

    <Button
        android:id="@+id/btnRep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frmMenu_reporte" />
</LinearLayout>